err/groundhogday.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pytoad-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/groundhogday'...
Compiling './lib/python3.5/site-packages/groundhogday/groundhogday.py'...
***   File "./lib/python3.5/site-packages/groundhogday/groundhogday.py", line 44
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/groundhogday/retry_with_airbrake.py'...
***   File "./lib/python3.5/site-packages/groundhogday/retry_with_airbrake.py", line 18
    print 'Would send (%s %s) to airbrake' % (e, self.additional_information)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/groundhogday/retry_with_sentry.py'...
***   File "./lib/python3.5/site-packages/groundhogday/retry_with_sentry.py", line 15
    print 'Would send [%s] to sentry.' % e
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/groundhogday-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytoad'...
Compiling './lib/python3.5/site-packages/pytoad/connection.py'...
***   File "./lib/python3.5/site-packages/pytoad/connection.py", line 49
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pytoad/decorator.py'...
***   File "./lib/python3.5/site-packages/pytoad/decorator.py", line 8
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/test_groundhogday.py'...
***   File "./lib/python3.5/site-packages/test/test_groundhogday.py", line 117
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/xmlbuilder'...
Listing './lib/python3.5/site-packages/xmlbuilder-0.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
